--- a/index.html
+++ b/index.html
@@ -931,8 +931,8 @@
   <!-- Global Mailform Output-->
   <div class="snackbars" id="form-output-global"></div>
   <!-- Javascript-->
-  <script src="js/core.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="./public/js/core.min.js"></script>
+  <script src="./public/js/script.js"></script>
 
   <!-- coded by Himic-->
 </body>
