修改了竞赛简介

--- a/index.html
+++ b/index.html
@@ -107,8 +107,10 @@
               <div class="container">
                 <h1 data-caption-animate="fadeInLeft" data-caption-delay="0">比赛信息</h1>
                 <p class="text-width-large" data-caption-animate="fadeInRight" data-caption-delay="100">
-                  iGEM竞赛是合成生物学领域的国际顶级学术性竞赛，最早由美国麻省理工学院于2003年发起，是一项以合成生物学为核心，综合生命科学、数学、工程学、信息科学、艺术设计等多个学科的国际大赛，受到Nature、Science、Scientific
-                  American、Economists 等学术期刊，以及 BBC 等媒体的广泛关注和专题报道。</p><a class="button button-primary button-ujarak"
+                  iGEM是合成生物学领域一年一度的的国际顶级科技赛事，也是涉及数学、计算机、统计学等领域交叉合作的跨学科竞赛。iGEM由美国麻省理工学院于2003年创办，2005年发展成为国际赛事，于每年10月在麻省理工学院进行最终角逐。国际基因工程机器大赛赛况和研究成果每年都受到《科学》、《自然》、《科学美国人》、《经济学人》等顶级学术杂志、英国广播公司这样的传统媒体的关注并进行专题报道，具有广泛的国际影响力。
+                  涵盖多学科的iGEM团队需要利用标准生物模块来构建基因回路、建立有效的数学模型，实现对精致复杂人工生物系统的预测、操纵和测量以完成比赛。比赛过程中参赛队伍研究所取得的所有有用成果可以提交给麻省理工学院的竞赛组委会，最终供全球的科学家共享。
+                  iGEM竞赛让学生有机会突破界限，通过合成生物学来解决世界面临的日常问题。多学科团队共同设计，使用可互换的生物部件和标准分子构建、测试和测量自己设计的系统生物学技术。iGEMers正在通过合成生物学来解决问题，努力创造他们对社区和世界的贡献，并建立一个更美好的世界。
+                  </p><a class="button button-primary button-ujarak"
                   href="#modalCta" data-toggle="modal" data-caption-animate="fadeInUp" data-caption-delay="200">了解更多</a>
               </div>
             </div>
@@ -118,7 +120,8 @@
               <div class="container">
                 <h1 data-caption-animate="fadeInLeft" data-caption-delay="0">队伍建设</h1>
                 <p class="text-width-large" data-caption-animate="fadeInRight" data-caption-delay="100">
-                  北师大igem团队成立至今已是第三届，我们的团队联系紧密，成员之间和睦相处，一起进步，一起提升。同时，BNUZH-China团队与北京师范大学北京校区代表队BNU-China在实验、数学建模、社会实践等方面进行了深入的合作，取得了许多优异的成果。
+                  北师大珠海校区iGEM团队成立至今已是第三届，我们的团队联系紧密，成员之间和睦相处，一起进步，一起提升。同时，BNUZH-China团队与北京师范大学北京校区代表队BNU-China在实验、数学建模、社会实践
+                  等方面进行了深入的合作，取得了许多优异的成果。
                 </p><a class="button button-primary button-ujarak" href="#modalCta" data-toggle="modal"
                   data-caption-animate="fadeInUp" data-caption-delay="200">了解更多</a>
               </div>
@@ -204,7 +207,7 @@
               <div class="col-sm-7">
                 <h3 class="wow fadeInLeft">加入我们做一些有意思的事情</h3>
                 <p>
-                  加入我们的团队一起BNUZH-China团队2021首次参加比赛就获得金牌，团队由文理学院19级本科生刘路旋担任队长，杜芸希担任副队长，成员由来自生物系、数学系、地理系、化学系、经济系的19位本科生组成。
+                  加入我们的团队一起BNUZH-China团队2021首次参加比赛就获得金牌，团队由来自北京师范大学珠海校区2019级和2020级的19位热爱探索、勤于钻研的同学组成，他们分别来自生物科学、数学、化学和地理专业。
                 </p>
                 <div class="group-sm group-middle group justify-content-end"><a
                     class="button button-primary button-ujarak" href="#modalCta" data-toggle="modal">了解更多</a><a
@@ -217,7 +220,7 @@
     </section>
 
     <!-- Latest Projects-->
-    <section class="section section-sm section-fluid bg-default text-center" id="projects">
+    <section class="section section-sm section-fluid bg-default text-center" id="projects">··
       <div class="container-fluid">
         <h2 class="wow fadeInLeft">往年项目介绍</h2>
         <p class="quote-jean wow fadeInRight" data-wow-delay=".1s">BNUZH-China团队以大肠杆菌Nissle
