--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
                     </div>
                     <ul class="rd-navbar-nav">
                       <li class="rd-nav-item active"><a class="rd-nav-link" href="#services">iGEM</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="#projects">历史项目</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="./projects.html">历史项目</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="./team.html">团队</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="#news">新闻</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="#contacts">联系我们</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="./news.html">新闻</a></li>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="./contact us.html">联系我们</a></li>
+
                     </ul>
                   </div>
                 </div>
