--- a/contact us.html
+++ b/contact us.html
@@ -1,4 +1,5 @@
-   
+<html>
+    <body>   
    <!-- Contact information-->
     <section class="section section-sm bg-default">
         <div class="container">
@@ -81,3 +82,5 @@
           </form>
         </div>
       </section>
+      </body>
+</html>
