--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,9 @@
-    <!-- Latest Projects-->
+<html>
+  <body>
+
+
+    
+<!-- Latest Projects-->
     <section class="section section-sm section-fluid bg-default text-center" id="projects">··
         <div class="container-fluid">
           <h2 class="wow fadeInLeft">往年项目介绍</h2>
@@ -175,4 +180,6 @@
           </div>
         </div>
       </section>
+  </body>
+</html>
   
