--- a/news.html
+++ b/news.html
@@ -35,8 +35,57 @@
       }
     </style>
   </head>
+
+   
  
- 
+   <!-- Page Header-->
+   <header class="section page-header">
+    <!-- RD Navbar-->
+    <div class="rd-navbar-wrap">
+      <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed"
+        data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static"
+        data-lg-device-layout="rd-navbar-fixed" data-xl-layout="rd-navbar-static"
+        data-xl-device-layout="rd-navbar-static" data-xxl-layout="rd-navbar-static"
+        data-xxl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46px"
+        data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
+        <div class="rd-navbar-main-outer">
+          <div class="rd-navbar-main">
+            <!-- RD Navbar Panel-->
+            <div class="rd-navbar-panel">
+              <!-- RD Navbar Toggle-->
+              <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
+              <!-- RD Navbar Brand-->
+              <div class="rd-navbar-brand"><a class="brand" href="index.html"><img src="images/school-zh.jpg" alt=""
+                style="width:290px; height:50px; margin-right: 20px;" /><img src="images/igem-team-nav.jpg" alt=""
+                    style="width:110px; height:70px;" />
+                </a></div>
+            </div>
+            <div class="rd-navbar-main-element">
+              <div class="rd-navbar-nav-wrap">
+                <!-- RD Navbar Share-->
+                <div class="rd-navbar-share fl-bigmug-line-share27" data-rd-navbar-toggle=".rd-navbar-share-list">
+                  <ul class="list-inline rd-navbar-share-list">
+                    <li class="rd-navbar-share-list-item"><a class="icon fa fa-facebook" href="#"></a></li>
+                    <li class="rd-navbar-share-list-item"><a class="icon fa fa-twitter" href="#"></a></li>
+                    <li class="rd-navbar-share-list-item"><a class="icon fa fa-google-plus" href="#"></a></li>
+                    <li class="rd-navbar-share-list-item"><a class="icon fa fa-instagram" href="#"></a></li>
+                  </ul>
+                </div>
+                <ul class="rd-navbar-nav">
+                  <li class="rd-nav-item active"><a class="rd-nav-link" href="#services">iGEM</a></li>
+                  <li class="rd-nav-item"><a class="rd-nav-link" href="./projects.html">历史项目</a></li>
+                  <li class="rd-nav-item"><a class="rd-nav-link" href="./team.html">团队</a></li>
+                  <li class="rd-nav-item"><a class="rd-nav-link" href="./news.html">新闻</a></li>
+                  <li class="rd-nav-item"><a class="rd-nav-link" href="./contact us.html">联系我们</a></li>
+
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </header>
  
 
     <body>
