--- a/projects.html
+++ b/projects.html
@@ -109,13 +109,13 @@
             <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInRight" data-filter="Type 4">
               <!-- Thumbnail Classic-->
               <article class="thumbnail thumbnail-classic thumbnail-md">
-                <div class="thumbnail-classic-figure"><img src="images/fullwidth-gallery-1-420x350.jpg" alt="" width="420"
+                <div class="thumbnail-classic-figure"><img src="images/project/21 PROJECT.png" alt="" width="420"
                     height="350" />
                 </div>
                 <div class="thumbnail-classic-caption">
                   <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"
                       href="images/grid-gallery-1-1200x800-original.jpg" data-lightgallery="item"><img
-                        src="images/fullwidth-gallery-1-420x350.jpg" alt="" width="420" height="350" /></a>
+                        src="images/project/21 PROJECT.png" alt="" width="420" height="350" /></a>
                     <h5 class="thumbnail-classic-title"><a href="#">硫酸吲哚酚</a></h5>
                   </div>
                   <p class="thumbnail-classic-text">
@@ -130,13 +130,13 @@
               data-wow-delay=".1s">
               <!-- Thumbnail Classic-->
               <article class="thumbnail thumbnail-classic thumbnail-md">
-                <div class="thumbnail-classic-figure"><img src="images/fullwidth-gallery-2-420x350.jpg" alt="" width="420"
+                <div class="thumbnail-classic-figure"><img src="images/project/21 RESULT.png" alt="" width="420"
                     height="350" />
                 </div>
                 <div class="thumbnail-classic-caption">
                   <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"
                       href="images/grid-gallery-2-1200x800-original.jpg" data-lightgallery="item"><img
-                        src="images/fullwidth-gallery-2-420x350.jpg" alt="" width="420" height="350" /></a>
+                        src="images/project/21 RESULT.png" alt="" width="420" height="350" /></a>
                     <h5 class="thumbnail-classic-title"><a href="#">Result</a></h5>
                   </div>
                   <p class="thumbnail-classic-text">
@@ -149,13 +149,13 @@
               data-wow-delay=".2s">
               <!-- Thumbnail Classic-->
               <article class="thumbnail thumbnail-classic thumbnail-md">
-                <div class="thumbnail-classic-figure"><img src="images/fullwidth-gallery-3-420x350.jpg" alt="" width="420"
+                <div class="thumbnail-classic-figure"><img src="images/project/21 HP.png" alt="" width="420"
                     height="350" />
                 </div>
                 <div class="thumbnail-classic-caption">
                   <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"
                       href="images/grid-gallery-3-1200x800-original.jpg" data-lightgallery="item"><img
-                        src="images/fullwidth-gallery-3-420x350.jpg" alt="" width="420" height="350" /></a>
+                        src="images/project/21 HP.png" alt="" width="420" height="350" /></a>
                     <h5 class="thumbnail-classic-title"><a href="#">Human Pratice</a></h5>
                   </div>
                   <p class="thumbnail-classic-text">
@@ -168,13 +168,13 @@
               data-wow-delay=".3s">
               <!-- Thumbnail Classic-->
               <article class="thumbnail thumbnail-classic thumbnail-md">
-                <div class="thumbnail-classic-figure"><img src="images/fullwidth-gallery-4-420x350.jpg" alt="" width="420"
+                <div class="thumbnail-classic-figure"><img src="images/project/21 MODEL.png" alt="" width="420"
                     height="350" />
                 </div>
                 <div class="thumbnail-classic-caption">
                   <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"
                       href="images/grid-gallery-4-1200x800-original.jpg" data-lightgallery="item"><img
-                        src="images/fullwidth-gallery-4-420x350.jpg" alt="" width="420" height="350" /></a>
+                        src="images/project/21 MODEL.png" alt="" width="420" height="350" /></a>
                     <h5 class="thumbnail-classic-title"><a href="#">Model</a></h5>
                   </div>
                   <p class="thumbnail-classic-text">
