--- a/projects.html
+++ b/projects.html
@@ -189,17 +189,20 @@
             <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInLeft" data-filter="Type 3">
               <!-- Thumbnail Classic-->
               <article class="thumbnail thumbnail-classic thumbnail-md">
-                <div class="thumbnail-classic-figure"><img src="images/fullwidth-gallery-5-420x350.jpg" alt="" width="420"
+                <div class="thumbnail-classic-figure"><img src="images/project/22 PROJECT.png" alt="" width="420"
                     height="350" />
                 </div>
                 <div class="thumbnail-classic-caption">
                   <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"
                       href="images/grid-gallery-5-1200x800-original.jpg" data-lightgallery="item"><img
-                        src="images/fullwidth-gallery-5-420x350.jpg" alt="" width="420" height="350" /></a>
-                    <h5 class="thumbnail-classic-title"><a href="#">硫酸吲哚酚</a></h5>
+                        src="images/project/22 PROJECT.png" alt="" width="420" height="350" /></a>
+                    <h5 class="thumbnail-classic-title"><a href="#">Project</a></h5>
                   </div>
                   <p class="thumbnail-classic-text">
-                    硫酸吲哚酚是促进慢性肾病进程的关键性尿毒素，食物中的色氨酸在肠道内被大肠杆菌代谢产生吲哚，吲哚被人体吸收后会在肝脏被代谢产生硫酸吲哚酚。BNUZH-China团队敲除TnaA，重构四步酶促反应，催化色氨酸形成吲哚丙酸。吲哚丙酸能够促进杯状细胞分泌物的产生，清除氧自由基，降低炎症反应，进而修复肠粘膜屏障。
+                    皮肤结构的严重缺损使自体成纤维细胞的生长失去支撑，导致此类伤口难以愈合。针对该问题，BNUZH-China 2022团队致力于开发一种基于细菌纤维素（BC）的体内可降解皮肤再生支架系统（BCAID），促进全层皮肤加速修复。
+我们利用木醋杆菌合成BC膜，作为成纤维细胞攀附生长的良好支架材料。在伤口愈合过程中，我们希望利用重组腺相关病毒（6型，AAV6）侵染伤口创缘细胞，使侵染的细胞表达并分泌表皮生长因子（EGF）、抗菌肽LL-37和碱性成纤维细胞生长因子（bFGF），最终达到促进伤口愈合和抗菌的效果。
+然而，纤维素体内不可降解的特点将会制约BC的应用，我们希望通过合成生物学方法解决这一问题：将工程化的外源成纤维细胞ATCC CRL-2522（BJ）培养在BC膜上共同植入伤口，在伤口愈合后期，通过启动蓝光光控系统，使BJ能够迅速分泌纤维素酶，从而实现BC膜的体内降解；出于生物安全考虑，在BC膜被完全降解后，工程化BJ细胞将在红光光控系统的调控下分泌毒素蛋白MazF使自身凋亡。至此，难愈合伤口完成修复，我们的支架系统也功成身退。
+
                   </p>
                 </div>
               </article>
@@ -208,17 +211,17 @@
               data-wow-delay=".1s">
               <!-- Thumbnail Classic-->
               <article class="thumbnail thumbnail-classic thumbnail-md">
-                <div class="thumbnail-classic-figure"><img src="images/fullwidth-gallery-6-420x350.jpg" alt="" width="420"
+                <div class="thumbnail-classic-figure"><img src="images/project/22 RESULTS.png" alt="" width="420"
                     height="350" />
                 </div>
                 <div class="thumbnail-classic-caption">
                   <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"
                       href="images/grid-gallery-6-1200x800-original.jpg" data-lightgallery="item"><img
-                        src="images/fullwidth-gallery-6-420x350.jpg" alt="" width="420" height="350" /></a>
-                    <h5 class="thumbnail-classic-title"><a href="#">硫酸吲哚酚</a></h5>
+                        src="images/project/22 RESULTS.png.png" alt="" width="420" height="350" /></a>
+                    <h5 class="thumbnail-classic-title"><a href="#">Result</a></h5>
                   </div>
                   <p class="thumbnail-classic-text">
-                    硫酸吲哚酚是促进慢性肾病进程的关键性尿毒素，食物中的色氨酸在肠道内被大肠杆菌代谢产生吲哚，吲哚被人体吸收后会在肝脏被代谢产生硫酸吲哚酚。BNUZH-China团队敲除TnaA，重构四步酶促反应，催化色氨酸形成吲哚丙酸。吲哚丙酸能够促进杯状细胞分泌物的产生，清除氧自由基，降低炎症反应，进而修复肠粘膜屏障。
+                    实验表明，细菌纤维素（BC）具有良好的生物相容性；感染相应腺相关病毒（6型，AAV6）的细胞可以提高生长因子EGF和抗菌肽LL-37的表达水平，验证了BCAID具有辅助愈合模块的基本功能；蓝光系统可以成功启动纤维素酶表达，实现BC膜的降解；红光系统最终使工程外源细胞的凋亡成为可能。总体而言，我们的结果初步证明我们的产品是安全有效的，可以帮助目标用户从真皮严重损伤中恢复过来。同时我们还成功制造了产品相关硬件，可以与BC支架一起进行辅助治疗。
                   </p>
                 </div>
               </article>
@@ -227,17 +230,17 @@
               data-wow-delay=".2s">
               <!-- Thumbnail Classic-->
               <article class="thumbnail thumbnail-classic thumbnail-md">
-                <div class="thumbnail-classic-figure"><img src="images/fullwidth-gallery-7-420x350.jpg" alt="" width="420"
+                <div class="thumbnail-classic-figure"><img src="images/project/22 HP.png" alt="" width="420"
                     height="350" />
                 </div>
                 <div class="thumbnail-classic-caption">
                   <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"
                       href="images/grid-gallery-7-1200x800-original.jpg" data-lightgallery="item"><img
-                        src="images/fullwidth-gallery-7-420x350.jpg" alt="" width="420" height="350" /></a>
-                    <h5 class="thumbnail-classic-title"><a href="#">硫酸吲哚酚</a></h5>
+                        src="images/project/22 HP.png" alt="" width="420" height="350" /></a>
+                    <h5 class="thumbnail-classic-title"><a href="#">Human Practice</a></h5>
                   </div>
                   <p class="thumbnail-classic-text">
-                    硫酸吲哚酚是促进慢性肾病进程的关键性尿毒素，食物中的色氨酸在肠道内被大肠杆菌代谢产生吲哚，吲哚被人体吸收后会在肝脏被代谢产生硫酸吲哚酚。BNUZH-China团队敲除TnaA，重构四步酶促反应，催化色氨酸形成吲哚丙酸。吲哚丙酸能够促进杯状细胞分泌物的产生，清除氧自由基，降低炎症反应，进而修复肠粘膜屏障。
+                    在项目开展的初期，我们接触到了一些严重烧伤的病例，这些难以愈合的伤口对患者和周围人的身心健康都造成了极大的伤害，怀着帮助这些人的愿望，我们决定开发一种低成本的皮肤再生支架系统，使更多患者能够获得经济有效的治疗。在项目推进的整个过程中，我们与很多优秀的iGEM团队进行了深入的交流与合作，如SZPT-China 2022，同时，我们也积极与产品的利益相关者们取得联系，如消防员、相关领域的企业、专家以及生物学教育的从业者等，在他们的帮助下，我们成功完成了目标产品——体内可降解皮肤再生支架系统（BCAID）的迭代工作，并开发了特色教育材料和工具，以介绍合成生物学和烧伤的相关知识。
                   </p>
                 </div>
               </article>
@@ -246,17 +249,21 @@
               data-wow-delay=".3s">
               <!-- Thumbnail Classic-->
               <article class="thumbnail thumbnail-classic thumbnail-md">
-                <div class="thumbnail-classic-figure"><img src="images/fullwidth-gallery-8-420x350.jpg" alt="" width="420"
+                <div class="thumbnail-classic-figure"><img src="images/project/22 MODEL.png" alt="" width="420"
                     height="350" />
                 </div>
                 <div class="thumbnail-classic-caption">
                   <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"
                       href="images/grid-gallery-8-1200x800-original.jpg" data-lightgallery="item"><img
-                        src="images/fullwidth-gallery-8-420x350.jpg" alt="" width="420" height="350" /></a>
-                    <h5 class="thumbnail-classic-title"><a href="#">硫酸吲哚酚</a></h5>
+                        src="images/project/22 MODEL.png" alt="" width="420" height="350" /></a>
+                    <h5 class="thumbnail-classic-title"><a href="#">Model</a></h5>
                   </div>
                   <p class="thumbnail-classic-text">
-                    硫酸吲哚酚是促进慢性肾病进程的关键性尿毒素，食物中的色氨酸在肠道内被大肠杆菌代谢产生吲哚，吲哚被人体吸收后会在肝脏被代谢产生硫酸吲哚酚。BNUZH-China团队敲除TnaA，重构四步酶促反应，催化色氨酸形成吲哚丙酸。吲哚丙酸能够促进杯状细胞分泌物的产生，清除氧自由基，降低炎症反应，进而修复肠粘膜屏障。
+                    BNUZH-China 2022团队项目的数学模型主要分为三个部分：
+                  模块1：蓝光光控系统。我们的光照系统使成纤维细胞系在受到蓝光照射时能够表达纤维素酶。在这里，我们使用希尔函数预测了纤维素外切酶、内切酶与纤维二糖酶的表达饱和时间与最终饱和量。
+                  模块2：纤维素降解模型。皮下纤维素支架在充分发挥作用后需要被降解,而纤维素支架的最终降解产物可能有两种不同的形式，即纤维二糖或葡萄糖。在此模块中，我们使用逻辑斯蒂回归与实验结果相拟合并通过米氏方程进行过程与结果分析，讨论了何种降解方式效率更高。
+                  模块3：伤口愈合。我们量化了AAV6-bFGF对伤口愈合的作用，通过真皮-表皮相互作用的伤口愈合模型对有BC膜与没有BC膜的伤口愈合进行比较。
+
                   </p>
                 </div>
               </article>
