change a few details

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                       </ul>
                     </div>
                     <ul class="rd-navbar-nav">
-                      <li class="rd-nav-item active"><a class="rd-nav-link" href="#services">iGEM</a></li>
+                      <li class="rd-nav-item active"><a class="rd-nav-link" href="./index.html">iGEM</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="./projects.html">历史项目</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="./team.html">团队</a></li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="./news.html">新闻</a></li>
@@ -106,7 +106,8 @@
             <div class="swiper-slide-caption section-md">
               <div class="container">
                 <h1 data-caption-animate="fadeInLeft" data-caption-delay="0" style="color:white;">比赛信息</h1>
-                <p class="text-width-large" data-caption-animate="fadeInRight" data-caption-delay="100"  style="color:white;">
+                <p class="text-width-large" data-caption-animate="fadeInRight" data-caption-delay="100"
+                  style="color:white;">
                   iGEM竞赛是合成生物学领域的国际顶级学术性竞赛，最早由美国麻省理工学院于2003年发起，是一项以合成生物学为核心，综合生命科学、数学、工程学、信息科学、艺术设计等多个学科的国际大赛，受到Nature、Science、Scientific
                   American、Economists 等学术期刊，以及 BBC 等媒体的广泛关注和专题报道。</p><a class="button button-primary button-ujarak"
                   href="#modalCta" data-toggle="modal" data-caption-animate="fadeInUp" data-caption-delay="200">了解更多</a>
@@ -205,194 +206,13 @@
               <div class="col-sm-7">
                 <h3 class="wow fadeInLeft">加入我们做一些有意思的事情</h3>
                 <p>
-                  加入我们的团队一起BNUZH-China团队2021首次参加比赛就获得金牌，团队由来自北京师范大学珠海校区2019级和2020级的19位热爱探索、勤于钻研的同学组成，他们分别来自生物科学、数学、化学和地理专业。
+                  BNUZH-China团队2021首次参加比赛就获得金牌，团队由来自北京师范大学珠海校区2019级和2020级的19位热爱探索、勤于钻研的同学组成，他们分别来自生物科学、数学、化学和地理专业。
                 </p>
                 <div class="group-sm group-middle group justify-content-end"><a
                     class="button button-primary button-ujarak" href="#modalCta" data-toggle="modal">了解更多</a><a
                     class="button button-white-outline button-ujarak" href="#">看一看</a></div>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Latest Projects-->
-    <section class="section section-sm section-fluid bg-default text-center" id="projects">··
-      <div class="container-fluid">
-        <h2 class="wow fadeInLeft">往年项目介绍</h2>
-        <p class="quote-jean wow fadeInRight" data-wow-delay=".1s">BNUZH-China团队以大肠杆菌Nissle
-          1917为基盘生物，开发一种新型肠道定殖工程菌，此工程菌将原大肠杆菌代谢色氨酸产生吲哚的基因TnaA敲除，并过表达工程菌葡萄糖脱氢酶增 </p>
-        <div class="isotope-filters isotope-filters-horizontal">
-          <button
-            class="isotope-filters-toggle button button-md button-icon button-icon-right button-default-outline button-wapasha"
-            data-custom-toggle="#isotope-3" data-custom-toggle-hide-on-blur="true"
-            data-custom-toggle-disable-on-blur="true"><span class="icon fa fa-caret-down"></span>Filter</button>
-          <ul class="isotope-filters-list" id="isotope-3">
-            <li><a class="active" href="#" data-isotope-filter="*" data-isotope-group="gallery">All</a></li>
-            <li><a href="#" data-isotope-filter="Type 1" data-isotope-group="gallery">2021</a></li>
-            <li><a href="#" data-isotope-filter="Type 2" data-isotope-group="gallery">2022</a></li>
-          </ul>
-        </div>
-        <div class="row row-30 isotope" data-isotope-layout="fitRows" data-isotope-group="gallery"
-          data-lightgallery="group">
-          <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInRight" data-filter="Type 4">
-            <!-- Thumbnail Classic-->
-            <article class="thumbnail thumbnail-classic thumbnail-md">
-              <div class="thumbnail-classic-figure"><img src="images/fullwidth-gallery-1-420x350.jpg" alt="" width="420"
-                  height="350" />
-              </div>
-              <div class="thumbnail-classic-caption">
-                <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"
-                    href="images/grid-gallery-1-1200x800-original.jpg" data-lightgallery="item"><img
-                      src="images/fullwidth-gallery-1-420x350.jpg" alt="" width="420" height="350" /></a>
-                  <h5 class="thumbnail-classic-title"><a href="#">硫酸吲哚酚</a></h5>
-                </div>
-                <p class="thumbnail-classic-text">
-                  慢性肾脏病（CKD）是指肾脏结构或功能异常，肾功能在几个月甚至几年内缓慢衰竭的一类肾脏疾病，目前CKD已成为世界范围内的一个严重的公共卫生问题。硫酸吲哚酚 （IS）
-                  是一种典型的肠道菌群-宿主共代谢物，也是加快 CKD 进程的关键尿毒素。
-                  BNUZ-China团队以大肠杆菌Nissle
-                  1917为底盘生物，开发一种新型肠道定殖工程菌，该菌中敲除原代谢色氨酸产生吲哚的基因TnaA，并过表达葡萄糖脱氢酶增强工程菌竞争力，达到替代肠道内大肠杆菌的目的。同时，团队在工程细菌中表达了催化色氨酸产生吲哚丙酸的基因簇，吲哚丙酸可以增强肠粘膜屏障。此外，CKD
-                  患者常伴随有肠道菌群失调，具体表现为有益菌减少，而致病菌和条件致病菌异常增殖。因此BNUZ-China团队通过使工程细菌异源表达β-半乳糖苷酶来催化乳糖形成低聚半乳糖，促进其他益生菌的生长。通过上述手段，项目可以从源头上消除肠毒素硫酸吲哚酚，同时促进肠道益生菌增殖，修复肠粘膜屏障，最终达到治疗慢性肾脏病的目的。
-
-                </p>
-              </div>
-            </article>
-          </div>
-          <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInRight" data-filter="Type 1"
-            data-wow-delay=".1s">
-            <!-- Thumbnail Classic-->
-            <article class="thumbnail thumbnail-classic thumbnail-md">
-              <div class="thumbnail-classic-figure"><img src="images/fullwidth-gallery-2-420x350.jpg" alt="" width="420"
-                  height="350" />
-              </div>
-              <div class="thumbnail-classic-caption">
-                <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"
-                    href="images/grid-gallery-2-1200x800-original.jpg" data-lightgallery="item"><img
-                      src="images/fullwidth-gallery-2-420x350.jpg" alt="" width="420" height="350" /></a>
-                  <h5 class="thumbnail-classic-title"><a href="#">Result</a></h5>
-                </div>
-                <p class="thumbnail-classic-text">
-                  我们成功地构建了代谢色氨酸以产生吲哚丙酸的代谢途径。吲哚丙酸已被证明对修复肠粘膜屏障有很好的作用，并能起到一定的延缓慢性肾脏疾病进展的作用。同时，过表达GDH以增强工程细菌肠道定植能力的功能通过数学建模得到了验证。另外，我们建立了群体感应过程的数学模型，为后续调节工程菌的肠道菌落结构和代谢提供了理论依据。我们还成功构建了终止开关和防逃逸系统，为我们产品的实际应用创造了条件。
-                </p>
-              </div>
-            </article>
-          </div>
-          <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInRight" data-filter="Type 2"
-            data-wow-delay=".2s">
-            <!-- Thumbnail Classic-->
-            <article class="thumbnail thumbnail-classic thumbnail-md">
-              <div class="thumbnail-classic-figure"><img src="images/fullwidth-gallery-3-420x350.jpg" alt="" width="420"
-                  height="350" />
-              </div>
-              <div class="thumbnail-classic-caption">
-                <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"
-                    href="images/grid-gallery-3-1200x800-original.jpg" data-lightgallery="item"><img
-                      src="images/fullwidth-gallery-3-420x350.jpg" alt="" width="420" height="350" /></a>
-                  <h5 class="thumbnail-classic-title"><a href="#">Human Pratice</a></h5>
-                </div>
-                <p class="thumbnail-classic-text">
-                  近年来，慢性肾脏病（CKD）的发病率在全球范围内呈上升趋势。根据世界卫生组织2020年12月9日发布的《全球健康估计报告》，肾脏疾病已上升为世界十大死因之一。在这种危急情况下，我们的团队提出了基于合成生物学的CKD治疗方案并开展了一系列人类实践活动。为了使我们的项目更有针对性和有效性，并更好地在实践中得到利用，我们进行了问卷调查和分析，与来自不同大学的其他团队合作，采访了相关领域的专家，并展开了一系列的科学交流活动。在这个过程中，我们获得了大量的专业意见，不断地改进我们的项目。
-                </p>
-              </div>
-            </article>
-          </div>
-          <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInRight" data-filter="Type 3"
-            data-wow-delay=".3s">
-            <!-- Thumbnail Classic-->
-            <article class="thumbnail thumbnail-classic thumbnail-md">
-              <div class="thumbnail-classic-figure"><img src="images/fullwidth-gallery-4-420x350.jpg" alt="" width="420"
-                  height="350" />
-              </div>
-              <div class="thumbnail-classic-caption">
-                <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"
-                    href="images/grid-gallery-4-1200x800-original.jpg" data-lightgallery="item"><img
-                      src="images/fullwidth-gallery-4-420x350.jpg" alt="" width="420" height="350" /></a>
-                  <h5 class="thumbnail-classic-title"><a href="#">Model</a></h5>
-                </div>
-                <p class="thumbnail-classic-text">
-                  我们将所有建模工作分为三个部分：共培育模型，群体感知模型和EXTRA Gillespie模型。
-                  在实验初期，我们模拟了含有常见益生菌、致病菌和大肠原杆菌的肠道环境，并对工程菌在该环境中的价值做出预测，最终得到该虚拟肠道环境中细菌之间的Lotka-Volterra相互作用模型。
-                  在实验中期，我们对革兰氏阴性菌搭建群体感应模型，通过该模型解释了肠道中致病菌的含量会如何随时间变化，并基于该模型设计了GDH和bga2表达时间的优化模型。
-                  在实验后期，我们构建了一个新的模型来模拟患者肠道中的益生菌恢复到正常水平、致病菌含量明显下降的新环境。此外，我们还在实验中利用Gillespie算法和Michaelis-Menten方程构建了色氨酸吲哚丙酸的四步催化反应。
-                </p>
-              </div>
-            </article>
-          </div>
-          <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInLeft" data-filter="Type 3">
-            <!-- Thumbnail Classic-->
-            <article class="thumbnail thumbnail-classic thumbnail-md">
-              <div class="thumbnail-classic-figure"><img src="images/fullwidth-gallery-5-420x350.jpg" alt="" width="420"
-                  height="350" />
-              </div>
-              <div class="thumbnail-classic-caption">
-                <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"
-                    href="images/grid-gallery-5-1200x800-original.jpg" data-lightgallery="item"><img
-                      src="images/fullwidth-gallery-5-420x350.jpg" alt="" width="420" height="350" /></a>
-                  <h5 class="thumbnail-classic-title"><a href="#">硫酸吲哚酚</a></h5>
-                </div>
-                <p class="thumbnail-classic-text">
-                  硫酸吲哚酚是促进慢性肾病进程的关键性尿毒素，食物中的色氨酸在肠道内被大肠杆菌代谢产生吲哚，吲哚被人体吸收后会在肝脏被代谢产生硫酸吲哚酚。BNUZH-China团队敲除TnaA，重构四步酶促反应，催化色氨酸形成吲哚丙酸。吲哚丙酸能够促进杯状细胞分泌物的产生，清除氧自由基，降低炎症反应，进而修复肠粘膜屏障。
-                </p>
-              </div>
-            </article>
-          </div>
-          <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInLeft" data-filter="Type 1"
-            data-wow-delay=".1s">
-            <!-- Thumbnail Classic-->
-            <article class="thumbnail thumbnail-classic thumbnail-md">
-              <div class="thumbnail-classic-figure"><img src="images/fullwidth-gallery-6-420x350.jpg" alt="" width="420"
-                  height="350" />
-              </div>
-              <div class="thumbnail-classic-caption">
-                <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"
-                    href="images/grid-gallery-6-1200x800-original.jpg" data-lightgallery="item"><img
-                      src="images/fullwidth-gallery-6-420x350.jpg" alt="" width="420" height="350" /></a>
-                  <h5 class="thumbnail-classic-title"><a href="#">硫酸吲哚酚</a></h5>
-                </div>
-                <p class="thumbnail-classic-text">
-                  硫酸吲哚酚是促进慢性肾病进程的关键性尿毒素，食物中的色氨酸在肠道内被大肠杆菌代谢产生吲哚，吲哚被人体吸收后会在肝脏被代谢产生硫酸吲哚酚。BNUZH-China团队敲除TnaA，重构四步酶促反应，催化色氨酸形成吲哚丙酸。吲哚丙酸能够促进杯状细胞分泌物的产生，清除氧自由基，降低炎症反应，进而修复肠粘膜屏障。
-                </p>
-              </div>
-            </article>
-          </div>
-          <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInLeft" data-filter="Type 2"
-            data-wow-delay=".2s">
-            <!-- Thumbnail Classic-->
-            <article class="thumbnail thumbnail-classic thumbnail-md">
-              <div class="thumbnail-classic-figure"><img src="images/fullwidth-gallery-7-420x350.jpg" alt="" width="420"
-                  height="350" />
-              </div>
-              <div class="thumbnail-classic-caption">
-                <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"
-                    href="images/grid-gallery-7-1200x800-original.jpg" data-lightgallery="item"><img
-                      src="images/fullwidth-gallery-7-420x350.jpg" alt="" width="420" height="350" /></a>
-                  <h5 class="thumbnail-classic-title"><a href="#">硫酸吲哚酚</a></h5>
-                </div>
-                <p class="thumbnail-classic-text">
-                  硫酸吲哚酚是促进慢性肾病进程的关键性尿毒素，食物中的色氨酸在肠道内被大肠杆菌代谢产生吲哚，吲哚被人体吸收后会在肝脏被代谢产生硫酸吲哚酚。BNUZH-China团队敲除TnaA，重构四步酶促反应，催化色氨酸形成吲哚丙酸。吲哚丙酸能够促进杯状细胞分泌物的产生，清除氧自由基，降低炎症反应，进而修复肠粘膜屏障。
-                </p>
-              </div>
-            </article>
-          </div>
-          <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInLeft" data-filter="Type 3"
-            data-wow-delay=".3s">
-            <!-- Thumbnail Classic-->
-            <article class="thumbnail thumbnail-classic thumbnail-md">
-              <div class="thumbnail-classic-figure"><img src="images/fullwidth-gallery-8-420x350.jpg" alt="" width="420"
-                  height="350" />
-              </div>
-              <div class="thumbnail-classic-caption">
-                <div class="thumbnail-classic-title-wrap"><a class="icon fl-bigmug-line-zoom60"
-                    href="images/grid-gallery-8-1200x800-original.jpg" data-lightgallery="item"><img
-                      src="images/fullwidth-gallery-8-420x350.jpg" alt="" width="420" height="350" /></a>
-                  <h5 class="thumbnail-classic-title"><a href="#">硫酸吲哚酚</a></h5>
-                </div>
-                <p class="thumbnail-classic-text">
-                  硫酸吲哚酚是促进慢性肾病进程的关键性尿毒素，食物中的色氨酸在肠道内被大肠杆菌代谢产生吲哚，吲哚被人体吸收后会在肝脏被代谢产生硫酸吲哚酚。BNUZH-China团队敲除TnaA，重构四步酶促反应，催化色氨酸形成吲哚丙酸。吲哚丙酸能够促进杯状细胞分泌物的产生，清除氧自由基，降低炎症反应，进而修复肠粘膜屏障。
-                </p>
-              </div>
-            </article>
           </div>
         </div>
       </div>
@@ -561,14 +381,12 @@
     </section>
 
     <!-- You dream — we embody-->
-    <section class="section section-sm bg-default text-md-left">
+    <!-- <section class="section section-sm bg-default text-md-left">
       <div class="container">
         <div class="row row-50 align-items-center justify-content-center justify-content-xl-between">
           <div class="col-lg-6 col-xl-5 wow fadeInLeft">
             <h2>填入一些话</h2>
-            <!-- Bootstrap tabs-->
             <div class="tabs-custom tabs-horizontal tabs-line tabs-line-big text-center text-md-left" id="tabs-6">
-              <!-- Nav tabs-->
               <ul class="nav nav-tabs">
                 <li class="nav-item" role="presentation"><a class="nav-link nav-link-big active" href="#tabs-6-1"
                     data-toggle="tab">01</a></li>
@@ -579,7 +397,6 @@
                 <li class="nav-item" role="presentation"><a class="nav-link nav-link-big" href="#tabs-6-4"
                     data-toggle="tab">04</a></li>
               </ul>
-              <!-- Tab panes-->
               <div class="tab-content">
                 <div class="tab-pane fade show active" id="tabs-6-1">
                   <h5 class="font-weight-normal">FREE APPS</h5>
@@ -631,7 +448,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- What people Say-->
     <section class="section section-sm section-bottom-70 section-fluid bg-default">
@@ -802,7 +619,7 @@
                 </p>
               </div>
             </article>
-          </div>          
+          </div>
           <div class="col-md-6 col-xl-4 wow fadeInRight" data-wow-delay=".1s">
             <!-- Quote Modern-->
             <article class="quote-modern quote-modern-custom">
@@ -1362,17 +1179,6 @@
             <h2 class="timeline-content-title">2023</h2>
             <p class="timeline-content-desc">
               4月22日下午，来自东风村和三板村的小朋友们认真聆听合成生物学的相关知识，同时也了解到生活中的合成生物学应用。
-            </p>
-          </div>
-        </div>
-
-        <div class="timeline-item" data-text="《你的孤独，虽败犹荣》">
-          <div class="timeline-content">
-            <img src="./images/21合照.png" alt="" class="timeline-img">
-            <h2 class="timeline-content-title">2023</h2>
-            <p class="timeline-content-desc">
-              如果你停止，就是谷底。如果你还在继续，
-              就是上坡。这是我听过关于人生低谷最好的阐述。
             </p>
           </div>
         </div>
