--- a/contact us.html
+++ b/contact us.html
@@ -2,179 +2,181 @@
 <html class="wide wow-animation" lang="en">
 
 <head>
-    <title>Home</title>
-    <meta name="format-detection" content="telephone=no">
-    <meta name="viewport"
-      content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta charset="utf-8">
-    <link rel="icon" href="images/school.jpeg" type="image/x-icon">
-    <!-- Stylesheets-->
-    <link rel="stylesheet" type="text/css"
-      href="//fonts.googleapis.com/css?family=Poppins:400,500,600%7CTeko:300,400,500%7CMaven+Pro:500">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
-      integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-    <style>
-      .ie-panel {
-        display: none;
-        background: #212121;
-        padding: 10px 0;
-        box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, .3);
-        clear: both;
-        text-align: center;
-        position: relative;
-        z-index: 1;
-      }
-  
-      html.ie-10 .ie-panel,
-      html.lt-ie-10 .ie-panel {
-        display: block;
-      }
-    </style>
-  </head>
- 
-  <!-- Page Header-->
-  <header class="section page-header">
-    <!-- RD Navbar-->
-    <div class="rd-navbar-wrap">
-      <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed"
-        data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static"
-        data-lg-device-layout="rd-navbar-fixed" data-xl-layout="rd-navbar-static"
-        data-xl-device-layout="rd-navbar-static" data-xxl-layout="rd-navbar-static"
-        data-xxl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46px"
-        data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
-        <div class="rd-navbar-main-outer">
-          <div class="rd-navbar-main">
-            <!-- RD Navbar Panel-->
-            <div class="rd-navbar-panel">
-              <!-- RD Navbar Toggle-->
-              <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
-              <!-- RD Navbar Brand-->
-              <div class="rd-navbar-brand"><a class="brand" href="index.html"><img src="images/school-zh.jpg" alt=""
-                style="width:290px; height:50px; margin-right: 20px;" /><img src="images/igem-team-nav.jpg" alt=""
-                    style="width:110px; height:70px;" />
-                </a></div>
-            </div>
-            <div class="rd-navbar-main-element">
-              <div class="rd-navbar-nav-wrap">
-                <!-- RD Navbar Share-->
-                <div class="rd-navbar-share fl-bigmug-line-share27" data-rd-navbar-toggle=".rd-navbar-share-list">
-                  <ul class="list-inline rd-navbar-share-list">
-                    <li class="rd-navbar-share-list-item"><a class="icon fa fa-facebook" href="#"></a></li>
-                    <li class="rd-navbar-share-list-item"><a class="icon fa fa-twitter" href="#"></a></li>
-                    <li class="rd-navbar-share-list-item"><a class="icon fa fa-google-plus" href="#"></a></li>
-                    <li class="rd-navbar-share-list-item"><a class="icon fa fa-instagram" href="#"></a></li>
-                  </ul>
-                </div>
-                <ul class="rd-navbar-nav">
-                  <li class="rd-nav-item active"><a class="rd-nav-link" href="#services">iGEM</a></li>
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="./projects.html">历史项目</a></li>
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="./team.html">团队</a></li>
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="./news.html">新闻</a></li>
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="./contact us.html">联系我们</a></li>
+  <title>Home</title>
+  <meta name="format-detection" content="telephone=no">
+  <meta name="viewport"
+    content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="utf-8">
+  <link rel="icon" href="images/school.jpeg" type="image/x-icon">
+  <!-- Stylesheets-->
+  <link rel="stylesheet" type="text/css"
+    href="//fonts.googleapis.com/css?family=Poppins:400,500,600%7CTeko:300,400,500%7CMaven+Pro:500">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/fonts.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
+    integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
+  <style>
+    .ie-panel {
+      display: none;
+      background: #212121;
+      padding: 10px 0;
+      box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, .3);
+      clear: both;
+      text-align: center;
+      position: relative;
+      z-index: 1;
+    }
 
+    html.ie-10 .ie-panel,
+    html.lt-ie-10 .ie-panel {
+      display: block;
+    }
+  </style>
+</head>
+
+<!-- Page Header-->
+<header class="section page-header">
+  <!-- RD Navbar-->
+  <div class="rd-navbar-wrap">
+    <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed"
+      data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static"
+      data-lg-device-layout="rd-navbar-fixed" data-xl-layout="rd-navbar-static" data-xl-device-layout="rd-navbar-static"
+      data-xxl-layout="rd-navbar-static" data-xxl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px"
+      data-xl-stick-up-offset="46px" data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true"
+      data-xxl-stick-up="true">
+      <div class="rd-navbar-main-outer">
+        <div class="rd-navbar-main">
+          <!-- RD Navbar Panel-->
+          <div class="rd-navbar-panel">
+            <!-- RD Navbar Toggle-->
+            <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
+            <!-- RD Navbar Brand-->
+            <div class="rd-navbar-brand"><a class="brand" href="index.html"><img src="images/school-zh.jpg" alt=""
+                  style="width:290px; height:50px; margin-right: 20px;" /><img src="images/igem-team-nav.jpg" alt=""
+                  style="width:110px; height:70px;" />
+              </a></div>
+          </div>
+          <div class="rd-navbar-main-element">
+            <div class="rd-navbar-nav-wrap">
+              <!-- RD Navbar Share-->
+              <div class="rd-navbar-share fl-bigmug-line-share27" data-rd-navbar-toggle=".rd-navbar-share-list">
+                <ul class="list-inline rd-navbar-share-list">
+                  <li class="rd-navbar-share-list-item"><a class="icon fa fa-facebook" href="#"></a></li>
+                  <li class="rd-navbar-share-list-item"><a class="icon fa fa-twitter" href="#"></a></li>
+                  <li class="rd-navbar-share-list-item"><a class="icon fa fa-google-plus" href="#"></a></li>
+                  <li class="rd-navbar-share-list-item"><a class="icon fa fa-instagram" href="#"></a></li>
                 </ul>
               </div>
+              <ul class="rd-navbar-nav">
+                <li class="rd-nav-item"><a class="rd-nav-link" href="./index.html">iGEM</a></li>
+                <li class="rd-nav-item"><a class="rd-nav-link" href="./projects.html">历史项目</a></li>
+                <li class="rd-nav-item"><a class="rd-nav-link" href="./team.html">团队</a></li>
+                <li class="rd-nav-item"><a class="rd-nav-link" href="./news.html">新闻</a></li>
+                <li class="rd-nav-item active"><a class="rd-nav-link" href="./contact us.html">联系我们</a></li>
+
+              </ul>
             </div>
           </div>
         </div>
-      </nav>
-    </div>
-  </header>
-    <body>   
-   <!-- Contact information-->
-    <section class="section section-sm bg-default">
-        <div class="container">
-          <div class="row row-30 justify-content-center">
-            <div class="col-sm-8 col-md-6 col-lg-4">
-              <article class="box-contacts">
-                <div class="box-contacts-body">
-                  <div class="box-contacts-icon fl-bigmug-line-cellphone55"></div>
-                  <div class="box-contacts-decor"></div>
-                  <p class="box-contacts-link"><a href="tel:#">+1 323-913-4688</a></p>
-                  <p class="box-contacts-link"><a href="tel:#">+1 323-888-4554</a></p>
-                </div>
-              </article>
-            </div>
-            <div class="col-sm-8 col-md-6 col-lg-4">
-              <article class="box-contacts">
-                <div class="box-contacts-body">
-                  <div class="box-contacts-icon fl-bigmug-line-up104"></div>
-                  <div class="box-contacts-decor"></div>
-                  <p class="box-contacts-link"><a href="#">广东省珠海市香洲区金凤路18号北京师范大学珠海校区金声楼1310</a></p>
-                </div>
-              </article>
-            </div>
-            <div class="col-sm-8 col-md-6 col-lg-4">
-              <article class="box-contacts">
-                <div class="box-contacts-body">
-                  <div class="box-contacts-icon fl-bigmug-line-chat55"></div>
-                  <div class="box-contacts-decor"></div>
-                  <p class="box-contacts-link"><a href="mailto:#">bnuzh_china@163.com</a></p>
-                  <p class="box-contacts-link"><a href="mailto:#"></a></p>
-                </div>
-              </article>
-            </div>
-          </div>
-        </div>
-      </section>
-  
-      <!-- Contact Form-->
-      <section class="section section-sm section-last bg-default text-left" id="contacts">
-        <div class="container">
-          <article class="title-classic">
-            <div class="title-classic-title">
-              <h3>了解更多</h3>
-            </div>
-            <div class="title-classic-text">
-              <p>If you have any questions, just fill in the contact form, and we will answer you shortly.</p>
+      </div>
+    </nav>
+  </div>
+</header>
+
+<body>
+  <!-- Contact information-->
+  <section class="section section-sm bg-default">
+    <div class="container">
+      <div class="row row-30 justify-content-center">
+        <div class="col-sm-8 col-md-6 col-lg-4">
+          <article class="box-contacts">
+            <div class="box-contacts-body">
+              <div class="box-contacts-icon fl-bigmug-line-cellphone55"></div>
+              <div class="box-contacts-decor"></div>
+              <p class="box-contacts-link"><a href="tel:#">+1 323-913-4688</a></p>
+              <p class="box-contacts-link"><a href="tel:#">+1 323-888-4554</a></p>
             </div>
           </article>
-          <form class="rd-form rd-form-variant-2 rd-mailform" data-form-output="form-output-global"
-            data-form-type="contact" method="post" action="bat/rd-mailform.php">
-            <div class="row row-14 gutters-14">
-              <div class="col-md-4">
-                <div class="form-wrap">
-                  <input class="form-input" id="contact-your-name-2" type="text" name="name" data-constraints="@Required">
-                  <label class="form-label" for="contact-your-name-2">Your Name</label>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="form-wrap">
-                  <input class="form-input" id="contact-email-2" type="email" name="email"
-                    data-constraints="@Email @Required">
-                  <label class="form-label" for="contact-email-2">E-mail</label>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="form-wrap">
-                  <input class="form-input" id="contact-phone-2" type="text" name="phone" data-constraints="@Numeric">
-                  <label class="form-label" for="contact-phone-2">Phone</label>
-                </div>
-              </div>
-              <div class="col-12">
-                <div class="form-wrap">
-                  <label class="form-label" for="contact-message-2">Message</label>
-                  <textarea class="form-input textarea-lg" id="contact-message-2" name="message"
-                    data-constraints="@Required"></textarea>
-                </div>
-              </div>
-            </div>
-            <button class="button button-primary button-pipaluk" type="submit">Send Message</button>
-          </form>
         </div>
-      </section>
+        <div class="col-sm-8 col-md-6 col-lg-4">
+          <article class="box-contacts">
+            <div class="box-contacts-body">
+              <div class="box-contacts-icon fl-bigmug-line-up104"></div>
+              <div class="box-contacts-decor"></div>
+              <p class="box-contacts-link"><a href="#">广东省珠海市香洲区金凤路18号北京师范大学珠海校区金声楼1310</a></p>
+            </div>
+          </article>
+        </div>
+        <div class="col-sm-8 col-md-6 col-lg-4">
+          <article class="box-contacts">
+            <div class="box-contacts-body">
+              <div class="box-contacts-icon fl-bigmug-line-chat55"></div>
+              <div class="box-contacts-decor"></div>
+              <p class="box-contacts-link"><a href="mailto:#">bnuzh_china@163.com</a></p>
+              <p class="box-contacts-link"><a href="mailto:#"></a></p>
+            </div>
+          </article>
+        </div>
+      </div>
+    </div>
+  </section>
 
-        <!-- Global Mailform Output-->
-     <div class="snackbars" id="form-output-global"></div>
-     <!-- Javascript-->
-     <script src="./js/core.min.js"></script>
-     <script src="./js/script.js"></script>
-   
-     <!-- coded by Himic-->   
+  <!-- Contact Form-->
+  <section class="section section-sm section-last bg-default text-left" id="contacts">
+    <div class="container">
+      <article class="title-classic">
+        <div class="title-classic-title">
+          <h3>了解更多</h3>
+        </div>
+        <div class="title-classic-text">
+          <p>If you have any questions, just fill in the contact form, and we will answer you shortly.</p>
+        </div>
+      </article>
+      <form class="rd-form rd-form-variant-2 rd-mailform" data-form-output="form-output-global" data-form-type="contact"
+        method="post" action="bat/rd-mailform.php">
+        <div class="row row-14 gutters-14">
+          <div class="col-md-4">
+            <div class="form-wrap">
+              <input class="form-input" id="contact-your-name-2" type="text" name="name" data-constraints="@Required">
+              <label class="form-label" for="contact-your-name-2">Your Name</label>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="form-wrap">
+              <input class="form-input" id="contact-email-2" type="email" name="email"
+                data-constraints="@Email @Required">
+              <label class="form-label" for="contact-email-2">E-mail</label>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="form-wrap">
+              <input class="form-input" id="contact-phone-2" type="text" name="phone" data-constraints="@Numeric">
+              <label class="form-label" for="contact-phone-2">Phone</label>
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="form-wrap">
+              <label class="form-label" for="contact-message-2">Message</label>
+              <textarea class="form-input textarea-lg" id="contact-message-2" name="message"
+                data-constraints="@Required"></textarea>
+            </div>
+          </div>
+        </div>
+        <button class="button button-primary button-pipaluk" type="submit">Send Message</button>
+      </form>
+    </div>
+  </section>
 
-      </body>
+  <!-- Global Mailform Output-->
+  <div class="snackbars" id="form-output-global"></div>
+  <!-- Javascript-->
+  <script src="./js/core.min.js"></script>
+  <script src="./js/script.js"></script>
+
+  <!-- coded by Himic-->
+
+</body>
+
 </html>
