修改了一些细节👻

--- a/projects.html
+++ b/projects.html
@@ -61,15 +61,6 @@
           </div>
           <div class="rd-navbar-main-element">
             <div class="rd-navbar-nav-wrap">
-              <!-- RD Navbar Share-->
-              <div class="rd-navbar-share fl-bigmug-line-share27" data-rd-navbar-toggle=".rd-navbar-share-list">
-                <ul class="list-inline rd-navbar-share-list">
-                  <li class="rd-navbar-share-list-item"><a class="icon fa fa-facebook" href="#"></a></li>
-                  <li class="rd-navbar-share-list-item"><a class="icon fa fa-twitter" href="#"></a></li>
-                  <li class="rd-navbar-share-list-item"><a class="icon fa fa-google-plus" href="#"></a></li>
-                  <li class="rd-navbar-share-list-item"><a class="icon fa fa-instagram" href="#"></a></li>
-                </ul>
-              </div>
               <ul class="rd-navbar-nav">
                 <li class="rd-nav-item"><a class="rd-nav-link" href="./index.html">iGEM</a></li>
                 <li class="rd-nav-item active"><a class="rd-nav-link" href="./projects.html">历史项目</a></li>
@@ -88,10 +79,10 @@
 
   <body>
 <!-- Latest Projects-->
-    <section class="section section-sm section-fluid bg-default text-center" id="projects">··
+    <section class="section section-sm section-fluid bg-default text-center side-space" id="projects">··
         <div class="container-fluid">
           <h2 class="wow fadeInLeft">往年项目介绍</h2>
-          <p class="quote-jean wow fadeInRight" data-wow-delay=".1s">BNUZH-China团队以大肠杆菌Nissle
+          <p class="quote-jean wow fadeInRight" data-wow-delay=".1s">BNUZ-China团队以大肠杆菌Nissle
             1917为基盘生物，开发一种新型肠道定殖工程菌，此工程菌将原大肠杆菌代谢色氨酸产生吲哚的基因TnaA敲除，并过表达工程菌葡萄糖脱氢酶增 </p>
           <div class="isotope-filters isotope-filters-horizontal">
             <button
@@ -121,7 +112,6 @@
                   <p class="thumbnail-classic-text">
                     慢性肾脏病（CKD）是指肾脏结构或功能异常，肾功能在几个月甚至几年内缓慢衰竭的一类肾脏疾病，目前CKD已成为世界范围内的一个严重的公共卫生问题。硫酸吲哚酚 （IS） 是一种典型的肠道菌群-宿主共代谢物，也是加快 CKD 进程的关键尿毒素。
   BNUZ-China团队以大肠杆菌Nissle 1917为底盘生物，开发一种新型肠道定殖工程菌，该菌中敲除原代谢色氨酸产生吲哚的基因TnaA，并过表达葡萄糖脱氢酶增强工程菌竞争力，达到替代肠道内大肠杆菌的目的。同时，团队在工程细菌中表达了催化色氨酸产生吲哚丙酸的基因簇，吲哚丙酸可以增强肠粘膜屏障。此外，CKD 患者常伴随有肠道菌群失调，具体表现为有益菌减少，而致病菌和条件致病菌异常增殖。因此BNUZ-China团队通过使工程细菌异源表达β-半乳糖苷酶来催化乳糖形成低聚半乳糖，促进其他益生菌的生长。通过上述手段，项目可以从源头上消除肠毒素硫酸吲哚酚，同时促进肠道益生菌增殖，修复肠粘膜屏障，最终达到治疗慢性肾脏病的目的。
-  
                   </p>
                 </div>
               </article>
@@ -264,6 +254,58 @@
           </div>
         </div>
       </section>
+
+  <!-- Page Footer-->
+  <div id="footer">
+    <div id="footer-content">
+      <div class="animate-fade-box">
+        <div id="team-logo" class="footer-img">
+          <a href="https://2022.igem.wiki/bnuzh-china/">
+            <img src="https://static.igem.wiki/teams/4211/wiki/footer/team-logo.png" style="width:auto;height:16vw;">
+            <!-- </a> -->
+        </div>
+        <div id="huitong-logo" class="footer-img">
+          <a href="https://ht.bnuzh.edu.cn/">
+            <img src="https://static.igem.wiki/teams/4211/wiki/footer/huitong-logo.png"
+              style="width:auto;height:3vw;">
+            <!-- </a> -->
+        </div>
+        <div id="leyu-logo" class="footer-img">
+          <a href="https://leyu.bnuzh.edu.cn/">
+            <img src="https://static.igem.wiki/teams/4211/wiki/footer/leyu-logo.png" style="width:auto;height:3vw;">
+            <!-- </a> -->
+        </div>
+        <div id="bnu-logo" class="footer-img">
+          <a href="https://www.bnu.edu.cn/">
+            <img src="https://static.igem.wiki/teams/4211/wiki/footer/bnu-logo.png" style="width:auto;height:12vw;">
+            <!-- </a> -->
+        </div>
+        <div id="wl-logo" class="footer-img">
+          <a href=" https://cef.bnu.edu.cn/">
+            <img src="https://static.igem.wiki/teams/4211/wiki/footer/wl-logo.png" style="width:auto;height:4vw;">
+        </div>
+        <div id="logo-bili" class="footer-img">
+          <img src="https://static.igem.wiki/teams/4211/wiki/footer/logo-bili.jpg" style="width:auto;height:10vw;">
+        </div>
+        <div id="logo-wechat" class="footer-img">
+          <img src="https://static.igem.wiki/teams/4211/wiki/footer/logo-wechat.jpg" style="width:auto;height:10vw;">
+        </div>
+        <div id="footer-contact" class="footer-img ">
+          <img src="https://static.igem.wiki/teams/4211/wiki/footer/footer-contact.png"
+            style="width:auto;height:8vw;">
+        </div>
+      </div>
+      <div class="animate-fade-box">
+        <div id="bgi-logo" class="footer-img">
+          <!-- <a href="https://www.bgi.com/"> -->
+          <img src="https://static.igem.wiki/teams/4211/wiki/footer/bgi-logo.png" style="width:auto;height:10vw;">
+          <!-- </a> -->
+        </div>
+      </div>
+      <div class="footer"></div>
+    </div>
+  </div>
+
 
   <!-- Global Mailform Output-->
   <div class="snackbars" id="form-output-global"></div>
