--- a/contact us.html
+++ b/contact us.html
@@ -60,15 +60,6 @@
           </div>
           <div class="rd-navbar-main-element">
             <div class="rd-navbar-nav-wrap">
-              <!-- RD Navbar Share-->
-              <div class="rd-navbar-share fl-bigmug-line-share27" data-rd-navbar-toggle=".rd-navbar-share-list">
-                <ul class="list-inline rd-navbar-share-list">
-                  <li class="rd-navbar-share-list-item"><a class="icon fa fa-facebook" href="#"></a></li>
-                  <li class="rd-navbar-share-list-item"><a class="icon fa fa-twitter" href="#"></a></li>
-                  <li class="rd-navbar-share-list-item"><a class="icon fa fa-google-plus" href="#"></a></li>
-                  <li class="rd-navbar-share-list-item"><a class="icon fa fa-instagram" href="#"></a></li>
-                </ul>
-              </div>
               <ul class="rd-navbar-nav">
                 <li class="rd-nav-item"><a class="rd-nav-link" href="./index.html">iGEM</a></li>
                 <li class="rd-nav-item"><a class="rd-nav-link" href="./projects.html">历史项目</a></li>
@@ -95,8 +86,8 @@
             <div class="box-contacts-body">
               <div class="box-contacts-icon fl-bigmug-line-cellphone55"></div>
               <div class="box-contacts-decor"></div>
-              <p class="box-contacts-link"><a href="tel:#">+1 323-913-4688</a></p>
-              <p class="box-contacts-link"><a href="tel:#">+1 323-888-4554</a></p>
+              <p class="box-contacts-link"><a href="#">公众号</a></p>
+              <p class="box-contacts-link"><a href="#">北师大 zh iGEM</a></p>
             </div>
           </article>
         </div>
@@ -123,54 +114,58 @@
     </div>
   </section>
 
-  <!-- Contact Form-->
-  <section class="section section-sm section-last bg-default text-left" id="contacts">
-    <div class="container">
-      <article class="title-classic">
-        <div class="title-classic-title">
-          <h3>了解更多</h3>
-        </div>
-        <div class="title-classic-text">
-          <p>If you have any questions, just fill in the contact form, and we will answer you shortly.</p>
-        </div>
-      </article>
-      <form class="rd-form rd-form-variant-2 rd-mailform" data-form-output="form-output-global" data-form-type="contact"
-        method="post" action="bat/rd-mailform.php">
-        <div class="row row-14 gutters-14">
-          <div class="col-md-4">
-            <div class="form-wrap">
-              <input class="form-input" id="contact-your-name-2" type="text" name="name" data-constraints="@Required">
-              <label class="form-label" for="contact-your-name-2">Your Name</label>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="form-wrap">
-              <input class="form-input" id="contact-email-2" type="email" name="email"
-                data-constraints="@Email @Required">
-              <label class="form-label" for="contact-email-2">E-mail</label>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="form-wrap">
-              <input class="form-input" id="contact-phone-2" type="text" name="phone" data-constraints="@Numeric">
-              <label class="form-label" for="contact-phone-2">Phone</label>
-            </div>
-          </div>
-          <div class="col-12">
-            <div class="form-wrap">
-              <label class="form-label" for="contact-message-2">Message</label>
-              <textarea class="form-input textarea-lg" id="contact-message-2" name="message"
-                data-constraints="@Required"></textarea>
-            </div>
-          </div>
-        </div>
-        <button class="button button-primary button-pipaluk" type="submit">Send Message</button>
-      </form>
-    </div>
-  </section>
 
-  <!-- Global Mailform Output-->
-  <div class="snackbars" id="form-output-global"></div>
+  <!-- Page Footer-->
+  <div id="footer">
+    <div id="footer-content">
+      <div class="animate-fade-box">
+        <div id="team-logo" class="footer-img">
+          <a href="https://2022.igem.wiki/bnuzh-china/">
+            <img src="https://static.igem.wiki/teams/4211/wiki/footer/team-logo.png" style="width:auto;height:16vw;">
+            <!-- </a> -->
+        </div>
+        <div id="huitong-logo" class="footer-img">
+          <a href="https://ht.bnuzh.edu.cn/">
+            <img src="https://static.igem.wiki/teams/4211/wiki/footer/huitong-logo.png"
+              style="width:auto;height:3vw;">
+            <!-- </a> -->
+        </div>
+        <div id="leyu-logo" class="footer-img">
+          <a href="https://leyu.bnuzh.edu.cn/">
+            <img src="https://static.igem.wiki/teams/4211/wiki/footer/leyu-logo.png" style="width:auto;height:3vw;">
+            <!-- </a> -->
+        </div>
+        <div id="bnu-logo" class="footer-img">
+          <a href="https://www.bnu.edu.cn/">
+            <img src="https://static.igem.wiki/teams/4211/wiki/footer/bnu-logo.png" style="width:auto;height:12vw;">
+            <!-- </a> -->
+        </div>
+        <div id="wl-logo" class="footer-img">
+          <a href=" https://cef.bnu.edu.cn/">
+            <img src="https://static.igem.wiki/teams/4211/wiki/footer/wl-logo.png" style="width:auto;height:4vw;">
+        </div>
+        <div id="logo-bili" class="footer-img">
+          <img src="https://static.igem.wiki/teams/4211/wiki/footer/logo-bili.jpg" style="width:auto;height:10vw;">
+        </div>
+        <div id="logo-wechat" class="footer-img">
+          <img src="https://static.igem.wiki/teams/4211/wiki/footer/logo-wechat.jpg" style="width:auto;height:10vw;">
+        </div>
+        <div id="footer-contact" class="footer-img ">
+          <img src="https://static.igem.wiki/teams/4211/wiki/footer/footer-contact.png"
+            style="width:auto;height:8vw;">
+        </div>
+      </div>
+      <div class="animate-fade-box">
+        <div id="bgi-logo" class="footer-img">
+          <!-- <a href="https://www.bgi.com/"> -->
+          <img src="https://static.igem.wiki/teams/4211/wiki/footer/bgi-logo.png" style="width:auto;height:10vw;">
+          <!-- </a> -->
+        </div>
+      </div>
+      <div class="footer"></div>
+    </div>
+  </div>
+
   <!-- Javascript-->
   <script src="./js/core.min.js"></script>
   <script src="./js/script.js"></script>
